<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.py_tecnologias.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.py_tecnologias.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_notas"
        android:name="com.example.py_tecnologias.ui.notas.NotasFragment"
        android:label="@string/menu_notas"
        tools:layout="@layout/fragment_notas" />
    <fragment
        android:id="@+id/nav_cursos"
        android:name="com.example.py_tecnologias.ui.cursos.CursosFragment"
        android:label="@string/menu_cursos"
        tools:layout="@layout/fragment_cursos" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.py_tecnologias.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>